k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jam-prizes
  namespace: jam-prizes-prod
  labels:
    app.kubernetes.io/name: jam-prizes
    app.kubernetes.io/part-of: jam-prizes
    environment: prod
spec:
  selector:
    app.kubernetes.io/name: jam-prizes
  ports:
    - name: http
      port: 80
      targetPort: http
