k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jam-prizes
  namespace: jam-prizes-prod
  labels:
    app.kubernetes.io/name: jam-prizes
    app.kubernetes.io/part-of: jam-prizes
    environment: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - prizes.jam.udc.ovh
      secretName: jam-prizes-tls
  rules:
    - host: prizes.jam.udc.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jam-prizes
                port:
                  number: 80
